# HydraulicSchemesCpp

./: .gitignore  CMakeLists.txt  README.md
source_code/: 1_CLDomainCartesian.cpp  1_CLDomainCartesian.h  2_CLFriction.cpp  2_CLFriction.h  3_CLSolverHLLC.cpp  3_CLSolverHLLC.h  4_CLDynamicTimestep.cpp  4_CLDynamicTimestep.h  5_CLSchemeGodunov.cpp  5_CLSchemeGodunov.h  6_CLBoundaries.cpp  6_CLBoundaries.h  7_CLSchemePromaides.cpp  GlobalHandlerClass.cpp  GlobalHandlerClass.h  definitions.h  globals_handlers.cpp  main.cpp  main.h  normalPlain.cpp  normalPlain.h
